unpackaged/main/default/objects/Contract/fields/Subject_Termination_Indemnity__c.field-meta.xml
<CustomField>
    <fullName>Subject_Termination_Indemnity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Si oui, définir le montant dans le champ montant de l&#39;indemnité de résiliation</inlineHelpText>
    <label>Soumis à Indemnité de résiliation</label>
    <type>Checkbox</type>
</CustomField>