unpackaged/main/default/objects/Contract/fields/Sum_Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Sum_Order_Product__c</fullName>
    <formula>SBQQ__Order__r.Sum_Order_Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sum of Order Product</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>