unpackaged/main/default/objects/Contract/fields/Tech_Button_Prolongation__c.field-meta.xml
<CustomField>
    <fullName>Tech_Button_Prolongation__c</fullName>
    <formula>NOT( ISBLANK(  Extension_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Button Prolongation</label>
    <type>Checkbox</type>
</CustomField>