unpackaged/main/default/objects/Contract/fields/Tech_RenewedContract__c.field-meta.xml
<CustomField>
    <fullName>Tech_RenewedContract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tech field used by the batch quote renewer and triggered short contract renewer</description>
    <label>Renewed contract</label>
    <type>Checkbox</type>
</CustomField>