unpackaged/main/default/objects/Contract/fields/TechIndemnityOrderCreated__c.field-meta.xml
<CustomField>
    <fullName>TechIndemnityOrderCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TechIndemnityOrderCreated?</label>
    <type>Checkbox</type>
</CustomField>