unpackaged/main/default/objects/Contract/fields/TechTerminated__c.field-meta.xml
<CustomField>
    <fullName>TechTerminated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TechRésilié</label>
    <type>Checkbox</type>
</CustomField>