unpackaged/main/default/objects/Contract/fields/Territoire__c.field-meta.xml
<CustomField>
    <fullName>Territoire__c</fullName>
    <formula>text(Agence_PF_Lookup__r.Territoire__c)</formula>
    <label>Territoire</label>
    <type>Text</type>
</CustomField>