unpackaged/main/default/objects/Contract/fields/Transport_et_Manutention__c.field-meta.xml
<CustomField>
    <fullName>Transport_et_Manutention__c</fullName>
    <label>Transport et Manutention</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Organisé par nos soins</fullName>
            </value>
            <value>
                <fullName>Organisé par le client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>