unpackaged/main/default/objects/Contract/fields/Uplift_Mode__c.field-meta.xml
<CustomField>
    <fullName>Uplift_Mode__c</fullName>
    <label>Mode d&#39;indexation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pas d&#39;indexation</fullName>
            </value>
            <value>
                <fullName>Indexation selon indice en vigueur</fullName>
            </value>
            <value>
                <fullName>Pourcentage fixe négocié</fullName>
            </value>
            <value>
                <fullName>Pourcentage de l&#39;indice négocié</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>