unpackaged/main/default/objects/Contract/recordTypes/Contract.recordType-meta.xml
<RecordType>
    <fullName>Contract</fullName>
    <active>true</active>
    <description>Contract</description>
    <label>Contract</label>
</RecordType>