unpackaged/main/default/objects/Contract/recordTypes/Contrat_vehicule.recordType-meta.xml
<RecordType>
    <fullName>Contrat_vehicule</fullName>
    <active>true</active>
    <label>Contrat véhicule</label>
</RecordType>