unpackaged/main/default/objects/Contract/recordTypes/Master_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Master_Agreement</fullName>
    <active>true</active>
    <description>Master Agreement</description>
    <label>Master Agreement</label>
</RecordType>