unpackaged/main/default/objects/Contract/validationRules/BlockTerminatedStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>BlockTerminatedStatus</fullName>
    <active>true</active>
    <description>Vr utilisé pour permettre le statut résilié uniquement quand toutes les infos nécessaire sont renseignées.</description>
    <errorConditionFormula>ISPICKVAL(Status, &#39;Contrat Résilié&#39;	)
	&amp;&amp;
TechTerminated__c = FALSE</errorConditionFormula>
    <errorMessage>Vous devez soumettre le contrat à une approbation si vous voulez le résilier.</errorMessage>
</ValidationRule>