unpackaged/main/default/objects/Contract/validationRules/Date_de_Prolongation_Sup_A_Date_de_Fin.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_de_Prolongation_Sup_A_Date_de_Fin</fullName>
    <active>true</active>
    <description>La date de prolongation doit être supérieur à la date de fin du contrat</description>
    <errorConditionFormula>Extension_Date__c &lt;= EndDate</errorConditionFormula>
    <errorDisplayField>Extension_Date__c</errorDisplayField>
    <errorMessage>La date de prolongation doit être supérieur à la date de fin du contrat</errorMessage>
</ValidationRule>