unpackaged/main/default/objects/Contract/validationRules/Terminated_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Terminated_Date</fullName>
    <active>true</active>
    <description>Terminated date can&#39;t be before contract start date / after contract end date</description>
    <errorConditionFormula>OR(
						InterruptionDate__c	 &gt; EndDate,
						InterruptionDate__c	 &lt;  StartDate
					)</errorConditionFormula>
    <errorDisplayField>InterruptionDate__c</errorDisplayField>
    <errorMessage>La date d&#39;interruption ne peut pas être inférieure à la date de début du contrat.
La date d&#39;interruption ne peut pas être supérieure à la date de fin du contrat.</errorMessage>
</ValidationRule>