unpackaged/main/default/objects/Contract/validationRules/Uplift_mode_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Uplift_mode_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				text( Status ) = &#39;Contract Generation&#39;,
				ISPICKVAL(Uplift_Mode__c , &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Uplift_Mode__c</errorDisplayField>
    <errorMessage>Merci de remplir le mode d&#39;indexation.</errorMessage>
</ValidationRule>