unpackaged/main/default/objects/Contract/listViews/AllActivatedContracts.listView-meta.xml
<ListView>
    <fullName>AllActivatedContracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Actif__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.STATUS_CODE</field>
        <operation>equals</operation>
        <value>A</value>
    </filters>
    <filters>
        <field>Actif__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Tous les contrats activés</label>
</ListView>