unpackaged/main/default/objects/Contract/listViews/Containers_Contrats.listView-meta.xml
<ListView>
    <fullName>Containers_Contrats</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>CONTRACT.CREATED_DATE</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>SBQQ__Quote__c</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CUSTOMER_SIGNED_DATE</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>Effective_Start_Date__c</columns>
    <columns>Effective_End_Date__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTRACT.RECORDTYPE</columns>
    <columns>CONTRACT.LAST_UPDATE</columns>
    <columns>Type_de_location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contract.Contract,Contract.Master_Agreement</value>
    </filters>
    <label>Containers _ Contrats</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>