unpackaged/main/default/objects/Contract/listViews/Contrats_v_hicules_ALL.listView-meta.xml
<ListView>
    <fullName>Contrats_v_hicules_ALL</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTRACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contract.Contrat_vehicule</value>
    </filters>
    <label>Contrats véhicules - ALL</label>
</ListView>