unpackaged/main/default/objects/Contract/listViews/Copie_de_Expired.listView-meta.xml
<ListView>
    <fullName>Copie_de_Expired</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>SBQQ__ExpirationDate__c</columns>
    <columns>Effective_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contract.Contract,Contract.Master_Agreement</value>
    </filters>
    <label>Expired date</label>
</ListView>